more doc tweaks

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            Project Template
+title:            GBD.Web.ProjectTemplate
 description:      "A Jekyll based Project Template for github projects"
 logo:             site_logo.png
 disqus_shortname: gbd_web_project_template
